# RAG_prototype

./: .envexample  .gitignore  JGJ125-2016：危险房屋鉴定标准.md  RAG复盘.md  README.md  README_gradio.md  addition.md  answers.rar  basesplittest.md  cache_manager.py  createfakefile.py  equations.md  evaluator.py  figures.md  gradio_app.py  main.py  output.txt  pyproject.toml  requirements.txt  retriever.py  run.py  saver.py  tables.md  test.md  test_debug.py  test_fuzzy_match.py  test_upload.py  total.md
.vercel/: project.json
detailed/: cacheRAG.py  dbsaver.py  outline_recognizer.py  splitapi.py  tablerecognizer.py  utils.py
saved_files/: bm25.pkl  doc_info.json  split_docs.pkl
saved_files/faiss_index/: index.faiss  index.pkl
