[project]
name = "rag-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.24.0",
    "faiss-cpu>=1.11.0.post1",
    "faker>=37.4.2",
    "gradio==5.23.0",
    "jieba>=0.42.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchain-qwq>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.4",
    "markdown>=3.8.2",
    "rank-bm25>=0.2.2",
    "rerankers[transformers]>=0.10.0",
    "scikit-learn>=1.7.1",
    "transformers>=4.54.1",
    "unstructured>=0.18.11",
]
