[project]
name = "rag-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "RAG复盘.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dashscope>=1.24.0",
    "faiss-cpu>=1.11.0.post1",
    "gradio==5.23.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-milvus>=0.2.1",
    "langchain-qwq>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.4",
    "levenshtein>=0.27.1",
    "markdown>=3.4.0",
    "rank-bm25>=0.2.2",
    "rerankers[transformers]>=0.10.0",
    "tiktoken>=0.9.0",
    "unstructured>=0.18.13",
]
